# rl-mini-game-env

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  pyproject.toml  test_docker.py  test_full_demo.py  test_local_direct.py  validate-submission.sh  validate.py
data/: emails.json  tasks.json
my_env/: README.md
server/: app.py  email_triage_environment.py  grader.py  requirements.txt
